--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@nivo/geo": "^0.87.0",
     "@nivo/line": "^0.87.0",
     "@nivo/pie": "^0.87.0",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
