--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "truview",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -22,7 +23,9 @@
     "@nivo/line": "^0.87.0",
     "@nivo/pie": "^0.87.0",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/kv": "^2.0.0",
     "@vercel/speed-insights": "^1.0.12",
+    "firebase": "^10.13.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
