--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@vercel/speed-insights": "^1.0.12",
     "firebase": "^10.13.0",
     "next": "14.2.5",
+    "openbim-components": "^1.5.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "three": "^0.160.1"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
